# ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  app.py  config.py  docker-compose.yml  fusion.py  generation.py  pyproject.toml  pytest.ini  rag_workflow.py  requirements.txt  run.sh  sample_data.txt  smoke_test.py
.github/workflows/: test.yml.example
ai_rag/: __init__.py
ai_rag/core/: __init__.py  constants.py  logging_config.py  settings.py  tracing.py
ai_rag/ingestion/: __init__.py  converters.py  models.py  structured.py  web.py
ai_rag/orchestration/: __init__.py  generation.py  rag_workflow.py
ai_rag/ranking/: __init__.py  fusion.py
ai_rag/retrieval/: __init__.py  graph.py  pinecone.py  sentence_window.py  types.py
ai_rag/ui/: __init__.py  app.py
ingestion/: __init__.py  pdf.py  storage.py  utils.py
retrieval/: __init__.py  sentence_window.py
scripts/: workflow_demo.py
tests/: test_config.py  test_fusion_pipeline.py  test_ingestion_pipelines.py  test_rag_workflow.py  test_retrieval_suite.py  test_ui_components.py
tests/fixtures/: sample.csv
