[tool.poetry]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise RAG Q&A System with advanced retrieval and ranking capabilities"
authors = ["Enterprise Team"]
readme = "README.md"
packages = [{include = "ai_rag"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.28.0"
langchain = ">=0.1.0"
langchain-google-genai = ">=0.0.6"
langgraph = ">=0.0.20"
langchain-community = ">=0.0.10"
chromadb = ">=0.4.22"
sentence-transformers = ">=2.2.2"
networkx = ">=3.1"
python-dotenv = ">=1.0.0"
pypdf = ">=3.0.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
sqlalchemy = ">=2.0.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
pinecone-client = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-mock = ">=3.12.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
black = ">=23.0.0"
pre-commit = ">=3.5.0"

[tool.poetry.scripts]
rag = "ai_rag.ui.app:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | chroma_db
  | data
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["ai_rag"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
